--- a/nginx.conf
+++ b/nginx.conf
@@ -1,22 +1,10 @@
-gzip on;
-gzip_vary on;
-
-gzip_comp_level 6;
-gzip_buffers 16 8k;
-
-gzip_min_length 1000;
-gzip_proxied any;
-gzip_disable "msie6";
-#gzip_http_version 1.0;
-gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/javascript;
-
 server {
     listen       80;
     server_name  localhost;
     client_max_body_size 10M;
     
     location /api/ {
-        proxy_pass http://locahost:9300/api/;
+        proxy_pass http://localhost:9300/api/;
     }
 
     location / {
